--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -331,8 +331,9 @@
 					 profile information saved for that address.
    				</div>
 				
+				
                  <label for="fallback_field_value">
-					 
+					 Fallback Value
 				 </label> 
                  <input 
 				 	type="text" 
