--- a/dada/templates/plugins/bounce_handler/scorecard.tmpl
+++ b/dada/templates/plugins/bounce_handler/scorecard.tmpl
@@ -1,117 +1,93 @@
-
 <!-- tmpl_if num_rows --> 
-	<table  width="100%">
-	 <tr> 
-	<td width="33%" align="left"> 
-
-	<strong>
-		<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var first_page -->">
-			First
-		</a>
-	</strong>
-	</td> 
-
-	<td width="33%" align="center"> 
-	<p>
-
-	<!-- tmpl_if previous_page --> 
-		<strong>
-			<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var previous_page -->">
-				Previous
+	<ul class="pagination">
+		<li class="arrow">
+			<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var first_page -->">
+				&laquo;
 			</a>
-		</strong>
-	<!-- tmpl_else --> 
-	<!-- /tmpl_if -->
-	&nbsp;&nbsp;&nbsp;&nbsp;
+		</li>
+
+		<!-- tmpl_if previous_page --> 
+			<li>
+				<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var previous_page -->">
+					&lsaquo;
+				</a>
+			</li>
+		<!-- /tmpl_if -->
+
 		<!-- tmpl_loop pages_in_set --> 
 			<!-- tmpl_if on_current_page --> 
-				<strong> 
-				 <!-- tmpl_var page --> 
-				</strong> 
+				<li class="current">
+					<!-- tmpl_var page --> 
+				</li>
 			<!-- tmpl_else --> 
-				<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var page -->">
-				 	<!-- tmpl_var page --> 
-				</a>
+				<li>
+					<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var page -->">
+						<!-- tmpl_var page --> 
+					</a>
+				</li>
 			<!-- /tmpl_if --> 
-
 		<!-- /tmpl_loop --> 
-		&nbsp;&nbsp;&nbsp;&nbsp;
+
 		<!-- tmpl_if next_page -->
-		<strong>
-			<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var next_page -->">
-				Next
-			</a>
-		</strong>
-		<!-- tmpl_else --> 
+			<li>
+				<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var next_page -->">
+					&rsaquo;
+				</a>
+			</li>
 		<!-- /tmpl_if --> 
-		</p>
-	</td> 
-
-	<td width="33%" align="right"> 
-
-	<strong>
-		<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var last_page -->">
-			Last
-		</a>
-	</strong>
-	</td>
-
-	</tr> 
-	</table>
+		<li class="arrow">
+			<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var last_page -->">
+				raquo;
+			</a>
+		</li>
+	</ul>
 
 	<div> 
 		<div style="max-height: 300px; overflow: auto; border:1px solid black">
-
-		  <table  style="width:100%" class="responsive">
-		   <tr style="background:#fff"> 
-		   		<td>
-					<p>
-						<strong>Email</strong>
-					</p>
-				</td>
-				<td>
-					<p>
-						<strong>Score</strong>
-					</p>
-				</td>
-			</tr> 
-
-			<!-- tmpl_loop scorecard --> 
-		   	<tr>
-				<td>
-					<p>
-					<a href="<!-- tmpl_var PLUGIN_URL -->?prm=cgi_bounce_score_search&amp;query=<!-- tmpl_var email ESCAPE="URL" -->&chrome=0" title="<!-- tmpl_var email ESCAPE="HTML" -->" class="modalbox">
-					 <!-- tmpl_var email --></p>
-					</a>
-				</td>
-				<td>
-					<p><!-- tmpl_var score --></p>
-				</td>
-			</tr> 
-			
-			<!-- /tmpl_loop --> 
-
-	     </table> 
-	</div>		
-
+			<table  style="width:100%" class="responsive">
+				<tr> 
+					<th>
+						Email
+					</th>
+					<th>
+						Score
+					</th>
+				</tr> 
+				<!-- tmpl_loop scorecard --> 
+					<tr>
+						<td>
+							<a href="<!-- tmpl_var PLUGIN_URL -->?prm=cgi_bounce_score_search&amp;query=<!-- tmpl_var email ESCAPE="URL" -->&chrome=0" title="<!-- tmpl_var email ESCAPE="HTML" -->" class="modalbox">
+								<!-- tmpl_var email -->
+							</a>
+						</td
+						<td>
+							<!-- tmpl_var score -->
+						</td>
+					</tr> 
+				<!-- /tmpl_loop --> 
+			</table> 
+		</div>		
 	</div> 
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
-<input type="hidden" name="prm" value="cgi_erase_scorecard" > 
-<input type="hidden" name="flavor" value="plugins" > 
-<input type="hidden" name="plugin" value="bounce_handler" > 
-	<div class="buttonfloat">
-	 <input type="submit" class="alertive button" onclick="if(!confirm('Are you sure you want to Erase the Bounce Scorecard? This cannot be undone.')){alert('Scorecard Not Erased.');return false;}" name="process" value="Erase Score Card" >
-	</div>
-	<br >
-	<div class="floatclear"></div>
-</form> 
+	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
+		<input type="hidden" name="prm" value="cgi_erase_scorecard" > 
+		<input type="hidden" name="flavor" value="plugins" > 
+		<input type="hidden" name="plugin" value="bounce_handler" > 
+		<ul class="button-group right">
+		    <li>
+				<input 
+					type="submit" 
+					class="alertive button" 
+					onclick="if(!confirm('Are you sure you want to Erase the Bounce Scorecard? This cannot be undone.')){alert('Scorecard Not Erased.');return false;}" 
+					name="process" 
+					value="Erase Score Card"
+				>
+			</li>
+		</ul>
+	</form> 
 
-		
-	
-	
 <!-- tmpl_else --> 
-	<p class="error">
-	 Currently, there are no bounced addresses saved in the scorecard.
-</p>
+	<div class="alert-box info radius"> 
+		 Currently, there are no bounced addresses saved in the Bounce Scorecard.
+	</div>
 <!-- /tmpl_if -->
