This update the Tracker plugin to work pretty well in mobile. Had no idea it would work this well!

--- a/dada/templates/plugins/tracker/country_geoip_table.tmpl
+++ b/dada/templates/plugins/tracker/country_geoip_table.tmpl
@@ -33,7 +33,9 @@
    </div> 
 
 <!-- tmpl_else --> 
-	<p class="alert">Nothing to report.</p> 
+	<div class="alert-box info radius">
+		Nothing to report.
+	</div> 
 <!-- /tmpl_if --> 
 
 <!-- end plugins/tracker/country_geoip_table.tmpl -->
