--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -277,8 +277,8 @@
 
     <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/foundation.min.js"></script>
     <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/foundation/foundation.offcanvas.js"></script>
-    
-    
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/foundation/foundation.magellan.js"></script>
+	
     <script>
       $(document).foundation();
     </script>
