--- a/dada/templates/plugins/tracker/message_email_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_email_report_table.tmpl
@@ -64,7 +64,9 @@
 </div>
 
 <!-- tmpl_else --> 
-	<p class="alert">No <!-- tmpl_var title --> addresses to report.</p> 
+	<div class="alert-box info radius">
+		No <!-- tmpl_var title --> addresses to report.
+	</div> 
 <!-- /tmpl_if -->
 
 
