--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -23,30 +23,6 @@
 	</div>
 </div>
 
-
-
-
-			  <!-- tmpl_if comment -->
-						<!-- tmpl_unless sending_done --> 
-							 <li><p> This screen will refresh every <!-- tmpl_var refresh_after --> seconds.</p></li>
-						<!-- /tmpl_unless --> 
-
-						<!-- tmpl_if auto_pickup_dropped_mailings --> 
-					    	<li>
-					        <p>
-					         Auto Pickup of Dropped Mailings is enabled!
-					        </p> 
-					    	</li>
-					    <!-- tmpl_else --> 
-							<li>
-					        <p>
-					         Auto Pickup of Dropped Mailings is disabled.
-					        </p> 
-					    	</li>
-						<!--/tmpl_if -->
-		<!-- /tmpl_if -->
-		
-		
 <!-- tmpl_if integrity_check --> 
     <!-- tmpl_if is_paused -->
  		<div class="alert-box warning radius">
@@ -81,8 +57,6 @@
 		    <!-- /tmpl_if --> 
     <!-- /tmpl_if --> 
 <!-- /tmpl_if --> 
-
-
 
 
 <!-- tmpl_if mailout_exists -->
@@ -210,8 +184,6 @@
 	</div>
 
 
- 	
- 	
 	<div class="row">
 	  <div class="small-9 small-centered columns">	
 			<div class="row">
@@ -270,35 +242,32 @@
 
 
 
-<fieldset> 
-	
-<legend>
-	<a href="#" class="toggleDivs" data-target="verbose_sending_information">
-	 +/-
- </a> Verbose Sending Information
-</legend>
+<fieldset> 	
+	<legend>
+		<a 
+			href="#" 
+			class="toggleDivs" 
+			data-target="verbose_sending_information"
+		>
+		 +/-
+	 </a> Verbose Sending Information
+	</legend>
 
-<div id="verbose_sending_information" style="display:none">
- <table  class="tagchart"> 
- 
- <!-- tmpl_loop sending_status --> 
-  <tr>  
-   <td> 
-   <strong> 
-    <!-- tmpl_var key -->
-   </strong>
-  </td>
-  <td> 
-   <!-- tmpl_var value --> 
-  </td>
-  </tr>
- <!-- /tmpl_loop --> 
- 
- </table> 
-
-</div> 
+	<div id="verbose_sending_information" style="display:none">
+		<table class="responsive" width="100%"> 
+			<!-- tmpl_loop sending_status --> 
+				<tr>  
+					<td> 
+						<!-- tmpl_var key -->
+					</td>
+					<td> 
+						<!-- tmpl_var value --> 
+					</td>
+				</tr>
+			<!-- /tmpl_loop --> 
+		</table> 
+	</div> 
 </fieldset> 
-
 
 <ul class="button-group right">
 	<li> 
@@ -312,22 +281,18 @@
 </ul>
 
 <!--tmpl_else--> 
-
     <!-- tmpl_if killed_it -->
         <div data-alert class="alert-box success radius">
             Your Mass Mailing was successfully stopped.
             <a href="#" class="close">&times;</a>
         </div>    
     <!-- tmpl_else --> 
-        
-	<div class="alert-box info radius">
-        <p> 
-         This Mass Mailing has completed.
-        </p>
-	</div>
-	
+		<div class="alert-box info radius">
+	        <p> 
+	         This Mass Mailing has completed.
+	        </p>
+		</div>	
     <!-- /tmpl_if --> 
-
 <!--/tmpl_if --> 
 
 <!-- end sending_monitor_screen.tmpl --> 
